src/components/MobileMenu/MobileMenu.module.css
.openMenu,
.closeMenu {
    position: absolute;
    top: 0;
    left: 0;
    margin: 10px;
    background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
	cursor: pointer;
	outline: inherit;
    color: #fff;
}

.menu {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-color: #1d1d1d;
    font-family:Arial, Helvetica, sans-serif;
}

.logo {
    width: 5rem;
    margin: 1rem;
}

.header {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: black;
    color: var(--blue);
    height: 25%;
}

.options {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 45%;
}
.options a,
.options button {
    background-color: transparent;
    border: none;
    text-decoration: none;
    color: #fff;
    padding: 10px 0;
}

.socials {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 30%;
    gap: 1.5rem;
}
.socials a,
.socials button {
    background-color: transparent;
    border: none;
    color: #fff;
    padding: 0;
}

